# str8ts_solver

./: .gitignore  LICENSE  README.md  bandit.yml  check_all_python_files.sh  create_tag.sh  generate_coverage_data.sh  pyproject.toml  sonar-project.properties
.github/workflows/: all_url_check.yml  create_tag.yml  pip_audit.yml  publish.yml  python_test.yml  scorecard.yml  third_party_checks.yml
examples/: basic_usage.py
str8ts_solver/: _active_cells_utils.py  _check_solution.py  _str8ts_utils.py  output_utils.py  solver.py
tests/: samples.py  test_solve.py  test_to_string.py
