[project]
name = "str8ts_solver"
version = "0.1.0"
description = "str8ts solver using z3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "z3-solver==4.15.4.0"
]

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "coverage==7.13.0",
    "flake8-bugbear==25.11.29",
    "flake8-pytest-style==2.2.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "pyright[nodejs]==1.1.407",
    "pytest==9.0.2",
    "ruff==0.14.9",
    "xenon==0.9.3"
]
