[project]
name = "str8ts_solver"
version = "0.2.0"
description = "str8ts solver using z3"
authors = [
  {email = "vil02_str8ts_solver@10g.pl"},
  {name = "Piotr Idzik"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["str8ts", "str8ts solver", "z3"]

dependencies = [
    "z3-solver==4.15.4.0"
]

[dependency-groups]
dev = [
    "bandit==1.9.2",
    "black==25.12.0",
    "coverage==7.13.1",
    "flake8-bugbear==25.11.29",
    "flake8-pytest-style==2.2.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "pyright[nodejs]==1.1.407",
    "pytest==9.0.2",
    "ruff==0.14.10",
    "xenon==0.9.3"
]

[project.urls]
repository = "https://github.com/vil02/str8ts_solver"
